--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Jokes Application</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">Tell me a joke!! </a>.</p>
+    <p>Tell me a joke!!</p>
 </div>
